--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 serde = {version = "1.0",features =["derive"]}
 serde_yaml = "0.8"
 clap = { version = "3.0", features = ["derive"] }
+regex = "1"
+dirs = "4.0.0"
