--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -15,7 +15,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build
         run:  cargo build --release
+      - name: Rename Packaging File
+        run:  cp target/release/auto-installer auto-installer-${{ matrix.os }}
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: target/release/auto-installer
+          files: auto-installer-${{ matrix.os }}
