--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "auto-installer"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,3 +11,6 @@ serde_yaml = "0.8"
 clap = { version = "3.0", features = ["derive"] }
 regex = "1"
 dirs = "4.0.0"
+
+[build-dependencies]
+static_vcruntime = "2.0"
